# pycaps

./: .env.sample  .gitignore  AI_HIGHLIGHTING_REFACTOR.md  CHANGELOG.md  CLAUDE.md  HIGHLIGHT_TEMPLATE_FIX.md  HTTP_API_MIGRATION.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  TRANSLATION_GUIDE.md  TRANSLATION_IMPLEMENTATION.md  bevere_portuguese.json  bevere_portuguese_fixed.json  bevere_portuguese_full.json  english-portuguese-enhancement.md  fernandinho_30s_demo.json  fernandinho_redpill_faster.json  ochamado_cap.json  output.json  process_all_templates.sh  process_templates_parallel.sh  pyproject.toml  sample_classic.json  sample_default.json  sample_explosive.json  sample_fast.json  sample_hype.json  sample_line-focus.json  sample_minimalist.json  sample_neo-minimal.json  sample_redpill.json  sample_redpill_output.json  sample_retro-gaming.json  sample_vibrant.json  sample_word-focus.json  test_ai_highlighting.py  test_http_ai.py  (+3 more)
docs/: API_USAGE.md  CLI.md  EXAMPLES.md
src/pycaps/: __init__.py
src/pycaps/ai/: emoji_controller.py  gpt.py  intelligent_enhancement.py
src/pycaps/animation/: CLAUDE.md  highlight_animation.py
src/pycaps/cli/: cli.py  config_cli.py  render_cli.py
src/pycaps/effect/text/: ai_emoji_effect.py  css_highlight_effect.py  emoji_in_segment_getter.py  highlight_styling_effect.py
src/pycaps/pipeline/: CLAUDE.md  caps_pipeline.py  caps_pipeline_builder.py  json_config_loader.py  json_schema.py
src/pycaps/renderer/: CLAUDE.md
src/pycaps/template/: CLAUDE.md
src/pycaps/transcriber/: CLAUDE.md  __init__.py  anti_hallucination_config.py  deepl_translation_service.py  faster_whisper_transcriber.py  google_translation_service.py  srt_loader.py  srt_transcriber.py  translation_quality_validator.py  translation_service.py  translation_transcriber.py  whisper_audio_transcriber.py
(+32 files in other folders)
